Make time tabular to prevent shifts

--- a/assets/new.scss
+++ b/assets/new.scss
@@ -782,3 +782,7 @@ open-heart:not(:defined) {
 [hidden] {
   display: none !important;
 }
+
+.time {
+  font-variant-numeric: tabular-nums;
+}
